# SmartFileManager

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
SmartFileManager/: main.py  optimize.py  register.py  remove.py  utils.py
